[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/basic_sprites/player.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15, 15 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="PlayerSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
limit_smoothed = true
smoothing_enabled = true

[node name="RespawnDetector" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RespawnDetector"]
visible = false
shape = SubResource( 2 )

[node name="KillZoneDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZoneDetector"]
visible = false
shape = SubResource( 3 )

[node name="RoomDetector" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomDetector"]
visible = false
shape = SubResource( 4 )
[connection signal="area_entered" from="RespawnDetector" to="." method="_on_RespawnDetector_area_entered"]
[connection signal="area_entered" from="KillZoneDetector" to="." method="_on_KillZoneDetector_area_entered"]
[connection signal="body_entered" from="KillZoneDetector" to="." method="_on_KillZoneDetector_body_entered"]
[connection signal="area_entered" from="RoomDetector" to="." method="_on_RoomDetector_area_entered"]
